syntax = "proto3";
package veracity.record.v1;

import "github.com/dogmatiq/interopspec/envelopespec/envelope.proto";

option go_package = "github.com/dogmatiq/veracity/persistence/record";

message Record {
    oneof op {
        EnqueueCommand enqueue_command = 1;
        MarkAggregateCommandHandled mark_aggregate_command_handled = 2;
        MarkIntegrationCommandHandled mark_integration_command_handled = 3;
        MarkProcessEventHandled mark_process_event_handled = 4;
        MarkProcessTimeoutHandled mark_process_timeout_handled = 5;
    }
}

message EnqueueCommand {
    dogma.interop.v1.envelope.Envelope Envelope = 1;
}

message MarkAggregateCommandHandled {
    string message_id = 1;
    dogma.interop.v1.envelope.Identity handler = 2;
    string instance_id = 3;
    uint64 revision = 4;
    bool exists = 5;
    repeated dogma.interop.v1.envelope.Envelope events = 6;
}

message MarkIntegrationCommandHandled {
    string message_id = 1;
    dogma.interop.v1.envelope.Identity handler = 2;
    repeated dogma.interop.v1.envelope.Envelope events = 3;
}

message MarkProcessEventHandled {
    dogma.interop.v1.envelope.Identity source_application = 1;
    uint64 source_offset = 1;
    dogma.interop.v1.envelope.Identity handler = 2;
    string instance_id = 3;
    uint64 revision = 4;
    string media_type = 5;
    bytes data = 6;
    repeated dogma.interop.v1.envelope.Envelope commands = 7;
    repeated dogma.interop.v1.envelope.Envelope timeouts = 8;
}

message MarkProcessTimeoutHandled {
    string message_id = 1;
    dogma.interop.v1.envelope.Identity handler = 2;
    string instance_id = 3;
    uint64 revision = 4;
    string media_type = 5;
    bytes data = 6;
    repeated dogma.interop.v1.envelope.Envelope commands = 7;
    repeated dogma.interop.v1.envelope.Envelope timeouts = 8;
}
